<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.application.anaruhudson.streamz.MainActivity"
    android:gravity="top|center"
    android:background="@color/white">
    <!--android:divider="?android:dividerHorizontal"-->
    <!--android:showDividers="middle"-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/sports_streams"
        android:textColor="#000"
        android:textSize="32sp"
        />


    <Button
        android:id="@+id/soccer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_weight="2"
        android:background="@drawable/borderbottom_first_item"
        android:onClick="openSport"
        android:text="@string/soccer"
        />


    <Button
        android:id="@+id/nba_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/borderbottom"
        android:onClick="openSport"
        android:text="@string/nba"
        />

    <Button
        android:id="@+id/nfl_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/borderbottom"
        android:onClick="openSport"
        android:text="@string/nfl"
        />

    <Button
        android:id="@+id/mlb_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/borderbottom"
        android:onClick="openSport"
        android:text="@string/mlb"
        />

    <Button
        android:id="@+id/rugby_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/borderbottom"
        android:onClick="openSport"
        android:text="@string/rugby"
        />

    <Button
        android:id="@+id/mma_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/borderbottom"
        android:onClick="openSport"
        android:text="@string/mma"
        />

    <Button
        android:id="@+id/nhl_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/borderbottom"
        android:onClick="openSport"
        android:text="@string/nhl"
        />

    <Button
        android:id="@+id/ncaabb_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_weight="2"
        android:background="@drawable/borderbottom_last_item"
        android:onClick="openSport"
        android:text="@string/ncaabb"
        />

</LinearLayout>